--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
    </head>
    <body>
       <div class="main">
-         <p class="p1"><h2></h2> <span></span></p>
-         <p class="p1"><h2></h2> <span></span></p>
+         <p class="p1"><h2>MONSTER HEALTH</h2> <span></span></p>
+         <p class="p1"><h2>PLAYER HEALTH</h2> <span></span></p>
       </div>
       <div class="main">
-         <p class="p2"></p>
-         <p class="p2"></p>
-         <p class="p2"></p>
-         <p class="p2"></p>
+         <p class="p2">ATTACK</p>
+         <p class="p2">STRONG ATTACK</p>
+         <p class="p2">HEAL</p>
+         <p class="p2">SHOW LOG</p>
       </div>
    </body>
 </html>
