--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>monster killer</title>
+      <link rel="stylesheet" href="assets/Styles/style.css" />
    </head>
    <body>
+   <div id="parent">
       <div class="main">
          <p class="p1"><h2>MONSTER HEALTH</h2> <span></span></p>
          <p class="p1"><h2>PLAYER HEALTH</h2> <span></span></p>
@@ -16,5 +18,6 @@
          <p class="p2">HEAL</p>
          <p class="p2">SHOW LOG</p>
       </div>
+   </div>
    </body>
 </html>
