--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
    <body>
    <div id="parent">
       <div class="main">
-         <p class="p1"><h2>MONSTER HEALTH</h2> <span></span></p>
-         <p class="p1"><h2>PLAYER HEALTH</h2> <span></span></p>
+         <p class="p1"><h2>MONSTER HEALTH</h2> <div class = "bar"></div></p>
+         <p class="p1"><h2>PLAYER HEALTH</h2> <div class = "bar"></div></p>
       </div>
-      <div class="main">
+      <div class="main" style="padding:20px;">
          <p class="p2">ATTACK</p>
          <p class="p2">STRONG ATTACK</p>
          <p class="p2">HEAL</p>
