edited html page

--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>monster killer</title>
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <title>Monster Killer</title>
       <link rel="stylesheet" href="assets/Styles/style.css" />
+      <script src="assets/Scripts/vendor.js" defer></script>
+      <script src="assets/Scripts/app.js" defer></script>
    </head>
    <body>
-   <div id="parent">
-      <div class="main">
-         <p class="p1"><h2>MONSTER HEALTH</h2> <div class = "bar"></div></p>
-         <p class="p1"><h2>PLAYER HEALTH</h2> <div class = "bar"></div></p>
-      </div>
-      <div class="main" style="padding:20px;">
-         <p class="p2">ATTACK</p>
-         <p class="p2">STRONG ATTACK</p>
-         <p class="p2">HEAL</p>
-         <p class="p2">SHOW LOG</p>
-      </div>
-   </div>
+      <section id="health-levels">
+         <h2>MONSTER HEALTH</h2>
+         <progress id="monster-health" max="100" value="100">100%</progress>
+         <h2>PLAYER HEALTH<span id="bonus-life">1</span></h2>
+         <progress id="player-health" max="100" value="100">100%</progress>
+      </section>
+      <section id="controls">
+         <button id="attack-btn">ATTACK</button>
+         <button id="strong-attack-btn">STRONG ATTACK</button>
+         <button id="heal-btn">HEAL</button>
+         <button id="log-btn">SHOW LOG</button>
+      </section>
    </body>
 </html>
